--- a/css/style.css
+++ b/css/style.css
@@ -54,5 +54,16 @@ hr {
 
 .search_result {
     margin: 0 auto;
-    width: 600px;
+    width: 100%;
+    max-width: 1600px;
+}
+
+table { 
+    border-collapse: collapse; width: 100%; margin-top: 20px; 
+}
+th, td { 
+    border: 1px solid #ccc; padding: 8px; 
+}
+th { 
+    background-color: #eee; 
 }
